--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Roman12ok/Personal_Finance_App.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Roman12ok/Personal_Finance_App/issues"
+  },
+  "homepage": "https://github.com/Roman12ok/Personal_Finance_App#readme"
 }
