--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "app for personal finance",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Roman English Ahmadu",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "nodemon": "^3.0.1"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/Roman12ok/Personal_Finance_App.git"
